@@ -46,6 +46,9 @@
 	<LI>Paragraph spacing is only applied to the first table
 	after a paragraph.
 
+	<LI>The tabloid media size was 10 points too short in
+	length.
+
 	<H3 _HD_OMIT_TOC>Bug Fixes</H3>
 
 	<LI>Switching between landscape and portrait orientations
